# Medicare

./: .env  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
medicare-admin-app/: Cargo.toml
medicare-app/: Cargo.toml
medicare-app/src/: main.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
