[package]
name = "medicare-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["full"] }
common = {path = "../common/"}
anyhow = "1.0.92"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
